--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -10,14 +10,16 @@ License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
-Imports:  phyloseq,
+Imports: phyloseq,
           pscl, 
           tidyverse,
           ggplot2,
           zinbwave
-Suggests: boot,
-          naniar, 
-          officer,
-          flextable, 
-          pheatmap
-
+Suggests: 
+    boot,
+    naniar,
+    officer,
+    flextable,
+    pheatmap,
+    testthat (>= 3.0.0)
+Config/testthat/edition: 3
