change repository name to zitools, added package dependencies, roxygen documentation

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,6 +16,7 @@ Imports: phyloseq,
           ggplot2,
           zinbwave,
           MatrixGenerics
+          SummarizedExperiment
 Suggests: 
     boot,
     naniar,
