--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,metadata)
 importFrom(SummarizedExperiment,rowData)
+importFrom(graphics,boxplot)
 importFrom(phyloseq,otu_table)
 importFrom(phyloseq,phy_tree)
 importFrom(phyloseq,sample_data)
