Roxygen documentation and correct S3 generics and methods

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,16 +7,16 @@ export(ziMain)
 exportClasses(Zi)
 exportMethods(assays)
 exportMethods(colData)
-exportMethods(metadata)
 exportMethods(otu_table)
 exportMethods(phy_tree)
 exportMethods(rowData)
 exportMethods(sample_data)
 exportMethods(t)
 exportMethods(tax_table)
+importFrom(MatrixGenerics,colMedians)
+importFrom(MatrixGenerics,rowMedians)
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
-importFrom(SummarizedExperiment,metadata)
 importFrom(SummarizedExperiment,rowData)
 importFrom(graphics,boxplot)
 importFrom(phyloseq,otu_table)
