--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,10 @@ Imports: phyloseq,
           zinbwave,
           MatrixGenerics,
           SummarizedExperiment,
-          S4Vectors
+          S4Vectors, 
+          stats, 
+          VGAM, 
+          matrixStats
 Suggests: 
     boot,
     naniar,
