--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,7 +5,6 @@ S3method(heatmap,Zi)
 S3method(mean,Zi)
 S3method(median,Zi)
 S3method(quantile,Zi)
-export(cor)
 export(replace_phyloseq)
 export(weightedVar)
 export(zi2countmatrix)
@@ -22,6 +21,7 @@ exportMethods(colVars)
 exportMethods(colWeightedMeans)
 exportMethods(colWeightedSds)
 exportMethods(colWeightedVars)
+exportMethods(cor)
 exportMethods(otu_table)
 exportMethods(phy_tree)
 exportMethods(rowData)
@@ -39,6 +39,8 @@ exportMethods(t)
 exportMethods(tax_table)
 exportMethods(var)
 exportMethods(weighted.mean)
+importFrom(DESeq2,DESeqDataSet)
+importFrom(DESeq2,DESeqDataSetFromMatrix)
 importFrom(MatrixGenerics,colMedians)
 importFrom(MatrixGenerics,colQuantiles)
 importFrom(MatrixGenerics,colSds)
@@ -53,17 +55,39 @@ importFrom(MatrixGenerics,rowVars)
 importFrom(MatrixGenerics,rowWeightedMeans)
 importFrom(MatrixGenerics,rowWeightedSds)
 importFrom(MatrixGenerics,rowWeightedVars)
+importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
+importFrom(VGAM,dzinegbin)
+importFrom(VGAM,dzipois)
+importFrom(dplyr,bind_cols)
+importFrom(dplyr,case_when)
+importFrom(dplyr,filter)
+importFrom(dplyr,mutate)
+importFrom(dplyr,sample_n)
+importFrom(dplyr,select)
 importFrom(graphics,boxplot)
 importFrom(matrixStats,weightedSd)
 importFrom(matrixStats,weightedVar)
+importFrom(phyloseq,"otu_table<-")
 importFrom(phyloseq,otu_table)
 importFrom(phyloseq,phy_tree)
+importFrom(phyloseq,phyloseq_to_deseq2)
 importFrom(phyloseq,sample_data)
 importFrom(phyloseq,tax_table)
+importFrom(phyloseq,taxa_are_rows)
+importFrom(pscl,predict)
+importFrom(pscl,zeroinfl)
 importFrom(stats,cor)
+importFrom(stats,dnbinom)
+importFrom(stats,dpois)
 importFrom(stats,median)
 importFrom(stats,quantile)
+importFrom(stats,rbinom)
 importFrom(stats,weighted.mean)
+importFrom(tibble,column_to_rownames)
+importFrom(tibble,rownames_to_column)
+importFrom(tidyr,gather)
+importFrom(tidyr,replace_na)
+importFrom(tidyr,spread)
