Roxygen Documentation and minor changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,7 +23,8 @@ Imports: phyloseq,
           matrixStats, 
           tidyr,
           tibble,
-          dplyr
+          dplyr,
+          DESeq2
 Suggests: 
     boot,
     naniar,
