--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ exportMethods(t)
 exportMethods(tax_table)
 exportMethods(var)
 exportMethods(weighted.mean)
+import(pscl)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,DESeqDataSetFromMatrix)
 importFrom(MatrixGenerics,colMedians)
@@ -61,9 +62,11 @@ importFrom(SummarizedExperiment,colData)
 importFrom(SummarizedExperiment,rowData)
 importFrom(VGAM,dzinegbin)
 importFrom(VGAM,dzipois)
+importFrom(dplyr,any_vars)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,case_when)
 importFrom(dplyr,filter)
+importFrom(dplyr,filter_all)
 importFrom(dplyr,mutate)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
@@ -77,11 +80,10 @@ importFrom(phyloseq,phyloseq_to_deseq2)
 importFrom(phyloseq,sample_data)
 importFrom(phyloseq,tax_table)
 importFrom(phyloseq,taxa_are_rows)
-importFrom(pscl,predict)
-importFrom(pscl,zeroinfl)
 importFrom(stats,cor)
 importFrom(stats,dnbinom)
 importFrom(stats,dpois)
+importFrom(stats,heatmap)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rbinom)
