--- a/NAMESPACE
+++ b/NAMESPACE
@@ -39,6 +39,7 @@ exportMethods(t)
 exportMethods(tax_table)
 exportMethods(var)
 exportMethods(weighted.mean)
+import(ggplot2)
 import(pscl)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,DESeqDataSetFromMatrix)
@@ -80,6 +81,7 @@ importFrom(phyloseq,phyloseq_to_deseq2)
 importFrom(phyloseq,sample_data)
 importFrom(phyloseq,tax_table)
 importFrom(phyloseq,taxa_are_rows)
+importFrom(reshape2,melt)
 importFrom(stats,cor)
 importFrom(stats,dnbinom)
 importFrom(stats,dpois)
