subset_sample, subset_feature function, MissingValueHeatmap, log1p for Zi object

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ S3method(mean,Zi)
 S3method(median,Zi)
 S3method(quantile,Zi)
 export(replace_phyloseq)
+export(subset_feature)
+export(subset_sample)
 export(weightedVar)
 export(zi2countmatrix)
 export(zi2outputMatrix)
@@ -22,6 +24,7 @@ exportMethods(colWeightedMeans)
 exportMethods(colWeightedSds)
 exportMethods(colWeightedVars)
 exportMethods(cor)
+exportMethods(log1p)
 exportMethods(otu_table)
 exportMethods(phy_tree)
 exportMethods(rowData)
@@ -75,6 +78,8 @@ importFrom(graphics,boxplot)
 importFrom(matrixStats,weightedSd)
 importFrom(matrixStats,weightedVar)
 importFrom(phyloseq,"otu_table<-")
+importFrom(phyloseq,"sample_data<-")
+importFrom(phyloseq,"tax_table<-")
 importFrom(phyloseq,otu_table)
 importFrom(phyloseq,phy_tree)
 importFrom(phyloseq,phyloseq_to_deseq2)
