additional arguments for inherited functions

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -15,7 +15,7 @@ export(ziMain)
 exportClasses(Zi)
 exportMethods(assays)
 exportMethods(colData)
-exportMethods(colMeans)
+exportMethods(colMeans2)
 exportMethods(colMedians)
 exportMethods(colQuantiles)
 exportMethods(colSds)
@@ -28,7 +28,7 @@ exportMethods(log1p)
 exportMethods(otu_table)
 exportMethods(phy_tree)
 exportMethods(rowData)
-exportMethods(rowMeans)
+exportMethods(rowMeans2)
 exportMethods(rowMedians)
 exportMethods(rowQuantiles)
 exportMethods(rowSds)
@@ -46,6 +46,7 @@ import(ggplot2)
 import(pscl)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,DESeqDataSetFromMatrix)
+importFrom(MatrixGenerics,colMeans2)
 importFrom(MatrixGenerics,colMedians)
 importFrom(MatrixGenerics,colQuantiles)
 importFrom(MatrixGenerics,colSds)
@@ -53,6 +54,7 @@ importFrom(MatrixGenerics,colVars)
 importFrom(MatrixGenerics,colWeightedMeans)
 importFrom(MatrixGenerics,colWeightedSds)
 importFrom(MatrixGenerics,colWeightedVars)
+importFrom(MatrixGenerics,rowMeans2)
 importFrom(MatrixGenerics,rowMedians)
 importFrom(MatrixGenerics,rowQuantiles)
 importFrom(MatrixGenerics,rowSds)
@@ -94,6 +96,7 @@ importFrom(stats,heatmap)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rbinom)
+importFrom(stats,sd)
 importFrom(stats,weighted.mean)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
