--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,12 @@ S3method(heatmap,Zi)
 S3method(mean,Zi)
 S3method(median,Zi)
 S3method(quantile,Zi)
+export(":=")
+export(.data)
+export(as_label)
+export(as_name)
+export(enquo)
+export(enquos)
 export(replace_phyloseq)
 export(subset_feature)
 export(subset_sample)
@@ -44,6 +50,7 @@ exportMethods(var)
 exportMethods(weighted.mean)
 import(ggplot2)
 import(pscl)
+import(utils)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,DESeqDataSetFromMatrix)
 importFrom(MatrixGenerics,colMeans2)
@@ -62,6 +69,7 @@ importFrom(MatrixGenerics,rowVars)
 importFrom(MatrixGenerics,rowWeightedMeans)
 importFrom(MatrixGenerics,rowWeightedSds)
 importFrom(MatrixGenerics,rowWeightedVars)
+importFrom(RColorBrewer,brewer.pal)
 importFrom(SummarizedExperiment,"assays<-")
 importFrom(SummarizedExperiment,assays)
 importFrom(SummarizedExperiment,colData)
@@ -77,6 +85,7 @@ importFrom(dplyr,mutate)
 importFrom(dplyr,sample_n)
 importFrom(dplyr,select)
 importFrom(graphics,boxplot)
+importFrom(magrittr,"%>%")
 importFrom(matrixStats,weightedSd)
 importFrom(matrixStats,weightedVar)
 importFrom(phyloseq,"otu_table<-")
@@ -89,6 +98,12 @@ importFrom(phyloseq,sample_data)
 importFrom(phyloseq,tax_table)
 importFrom(phyloseq,taxa_are_rows)
 importFrom(reshape2,melt)
+importFrom(rlang,":=")
+importFrom(rlang,.data)
+importFrom(rlang,as_label)
+importFrom(rlang,as_name)
+importFrom(rlang,enquo)
+importFrom(rlang,enquos)
 importFrom(stats,cor)
 importFrom(stats,dnbinom)
 importFrom(stats,dpois)
