--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,19 +5,15 @@ Authors@R:
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
 Description: What the package does (one paragraph).
-License: `use_mit_license()`, `use_gpl3_license()` or friends to pick a
-    license
+License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
 Imports: phyloseq,
           pscl, 
-          tidyverse,
           ggplot2,
-          zinbwave,
           MatrixGenerics,
           SummarizedExperiment,
-          S4Vectors, 
           stats, 
           VGAM, 
           matrixStats, 
@@ -25,7 +21,9 @@ Imports: phyloseq,
           tibble,
           dplyr,
           DESeq2,
-          reshape2
+          reshape2, 
+          RColorBrewer,
+          rlang
 Suggests: 
     boot,
     naniar,
@@ -40,4 +38,5 @@ Collate:
     'helper.R'
     'inherited_functions.R'
     'plots.R'
+    'utils-tidy-eval.R'
     'utils.R'
