correct documentation R CMD check Readme file

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(as_label)
 export(as_name)
 export(enquo)
 export(enquos)
+export(heatmap)
 export(replace_phyloseq)
 export(subset_feature)
 export(subset_sample)
