--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,10 +1,12 @@
 Package: zitools
-Title: What the Package Does (One Line, Title Case)
+Title: Analysis of zero-inflated count data 
 Version: 0.0.0.9000
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Description: What the package does (one paragraph).
+Description: 
+  zitools implements a zero inflated mixture model to zero inflated
+  count data and calculates weights for all zero counts. 
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -23,20 +25,19 @@ Imports: phyloseq,
           DESeq2,
           reshape2, 
           RColorBrewer,
-          rlang
+          rlang,
+          magrittr,
+          methods
 Suggests: 
-    boot,
-    naniar,
-    officer,
-    flextable,
-    pheatmap,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Collate: 
+    'globals.R'
     'zi_function.R'
-    'PCA.R'
     'helper.R'
     'inherited_functions.R'
     'plots.R'
     'utils-tidy-eval.R'
     'utils.R'
+Depends:  R (>= 2.10), 
+          methods
