--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(as_name)
 export(enquo)
 export(enquos)
 export(heatmap)
+export(log2p)
 export(replace_phyloseq)
 export(subset_feature)
 export(subset_sample)
