--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -39,5 +39,6 @@ Collate:
     'plots.R'
     'utils-tidy-eval.R'
     'utils.R'
-Depends:  R (>= 2.10), 
+Depends: R (>= 2.10), 
           methods
+LazyData: true
