--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -33,11 +33,10 @@ Suggests:
 Config/testthat/edition: 3
 Collate: 
     'globals.R'
-    'zi_function.R'
+    'ziMain.R'
     'helper.R'
     'inherited_functions.R'
     'plots.R'
-    'utils-tidy-eval.R'
     'utils.R'
 Depends: R (>= 2.10), 
           methods
