--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,8 @@ Imports: phyloseq,
           magrittr,
           methods
 Suggests: 
+    knitr,
+    rmarkdown,
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Collate: 
@@ -41,3 +43,4 @@ Collate:
 Depends: R (>= 2.10), 
           methods
 LazyData: true
+VignetteBuilder: knitr
