resample_output function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ S3method(quantile,Zi)
 export(heatmap)
 export(log2p)
 export(replace_phyloseq)
+export(resample_output)
 export(subset_feature)
 export(subset_sample)
 export(weightedVar)
