Vignette, minor changes

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,8 @@ export(subset_feature)
 export(subset_sample)
 export(weightedVar)
 export(zi2countmatrix)
-export(zi2outputMatrix)
+export(zi2deseq2)
+export(zi2output)
 export(ziMain)
 exportClasses(Zi)
 exportMethods(assays)
