--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,13 +8,13 @@ S3method(quantile,Zi)
 export(heatmap)
 export(log2p)
 export(replace_phyloseq)
-export(resample_output)
+export(resample_deinflatedcounts)
 export(subset_feature)
 export(subset_sample)
 export(weightedVar)
-export(zi2countmatrix)
+export(zi2deinflatedcounts)
 export(zi2deseq2)
-export(zi2output)
+export(zi2inputcounts)
 export(ziMain)
 exportClasses(Zi)
 exportMethods(assays)
