--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,16 +5,19 @@ S3method(heatmap,Zi)
 S3method(mean,Zi)
 S3method(median,Zi)
 S3method(quantile,Zi)
+export(deinflatedcounts)
 export(heatmap)
+export(inputcounts)
+export(inputdata)
 export(log2p)
+export(model)
 export(replace_phyloseq)
 export(resample_deinflatedcounts)
 export(subset_feature)
 export(subset_sample)
 export(weightedVar)
-export(zi2deinflatedcounts)
+export(weights)
 export(zi2deseq2)
-export(zi2inputcounts)
 export(ziMain)
 exportClasses(Zi)
 exportMethods(assays)
@@ -28,7 +31,11 @@ exportMethods(colWeightedMeans)
 exportMethods(colWeightedSds)
 exportMethods(colWeightedVars)
 exportMethods(cor)
+exportMethods(deinflatedcounts)
+exportMethods(inputcounts)
+exportMethods(inputdata)
 exportMethods(log1p)
+exportMethods(model)
 exportMethods(otu_table)
 exportMethods(phy_tree)
 exportMethods(rowData)
@@ -46,6 +53,7 @@ exportMethods(t)
 exportMethods(tax_table)
 exportMethods(var)
 exportMethods(weighted.mean)
+exportMethods(weights)
 import(ggplot2)
 import(pscl)
 import(utils)
