added arithmetic operators

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,10 @@ export(weights)
 export(zi2deseq2)
 export(ziMain)
 exportClasses(Zi)
+exportMethods("*")
+exportMethods("+")
+exportMethods("-")
+exportMethods("/")
 exportMethods(assays)
 exportMethods(colData)
 exportMethods(colMeans2)
