--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,7 @@ S3method(heatmap,Zi)
 S3method(mean,Zi)
 S3method(median,Zi)
 S3method(quantile,Zi)
+export(MissingValueHeatmap)
 export(deinflatedcounts)
 export(heatmap)
 export(inputcounts)
