fixed weightedSd and some errors

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -16,6 +16,7 @@ export(replace_phyloseq)
 export(resample_deinflatedcounts)
 export(subset_feature)
 export(subset_sample)
+export(weightedSd)
 export(weightedVar)
 export(weights)
 export(zi2deseq2)
@@ -36,6 +37,7 @@ exportMethods(colWeightedMeans)
 exportMethods(colWeightedSds)
 exportMethods(colWeightedVars)
 exportMethods(cor)
+exportMethods(cov)
 exportMethods(deinflatedcounts)
 exportMethods(inputcounts)
 exportMethods(inputdata)
@@ -43,6 +45,7 @@ exportMethods(log1p)
 exportMethods(model)
 exportMethods(otu_table)
 exportMethods(phy_tree)
+exportMethods(plot)
 exportMethods(rowData)
 exportMethods(rowMeans2)
 exportMethods(rowMedians)
@@ -54,6 +57,7 @@ exportMethods(rowWeightedSds)
 exportMethods(rowWeightedVars)
 exportMethods(sample_data)
 exportMethods(sd)
+exportMethods(show)
 exportMethods(t)
 exportMethods(tax_table)
 exportMethods(var)
@@ -99,6 +103,8 @@ importFrom(graphics,boxplot)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,weightedSd)
 importFrom(matrixStats,weightedVar)
+importFrom(methods,plot)
+importFrom(methods,show)
 importFrom(phyloseq,"otu_table<-")
 importFrom(phyloseq,"sample_data<-")
 importFrom(phyloseq,"tax_table<-")
