--- a/NAMESPACE
+++ b/NAMESPACE
@@ -66,6 +66,8 @@ exportMethods(weights)
 import(ggplot2)
 import(pscl)
 import(utils)
+importFrom(BiocGenerics,sd)
+importFrom(BiocGenerics,var)
 importFrom(DESeq2,DESeqDataSet)
 importFrom(DESeq2,DESeqDataSetFromMatrix)
 importFrom(MatrixGenerics,colMeans2)
@@ -121,7 +123,6 @@ importFrom(stats,heatmap)
 importFrom(stats,median)
 importFrom(stats,quantile)
 importFrom(stats,rbinom)
-importFrom(stats,sd)
 importFrom(stats,weighted.mean)
 importFrom(tibble,column_to_rownames)
 importFrom(tibble,rownames_to_column)
