--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,6 @@ export(inputcounts)
 export(inputdata)
 export(log2p)
 export(model)
-export(replace_phyloseq)
 export(resample_deinflatedcounts)
 export(subset_feature)
 export(subset_sample)
@@ -20,6 +19,7 @@ export(weightedSd)
 export(weightedVar)
 export(weights)
 export(zi2deseq2)
+export(zi2phyloseq)
 export(ziMain)
 exportClasses(Zi)
 exportMethods("*")
