--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -25,9 +25,7 @@ Imports: phyloseq,
           DESeq2,
           reshape2, 
           RColorBrewer,
-          rlang,
-          magrittr,
-          methods, 
+          magrittr, 
           BiocGenerics
 Suggests: 
     knitr,
@@ -35,6 +33,7 @@ Suggests:
     testthat (>= 3.0.0)
 Config/testthat/edition: 3
 Collate: 
+    'data.R'
     'globals.R'
     'ziMain.R'
     'helper.R'
@@ -45,3 +44,4 @@ Depends: R (>= 2.10),
           methods
 LazyData: true
 VignetteBuilder: rmarkdown
+biocViews: 
