--- a/NAMESPACE
+++ b/NAMESPACE
@@ -105,6 +105,7 @@ importFrom(graphics,boxplot)
 importFrom(magrittr,"%>%")
 importFrom(matrixStats,weightedSd)
 importFrom(matrixStats,weightedVar)
+importFrom(methods,Arith)
 importFrom(methods,show)
 importFrom(phyloseq,"otu_table<-")
 importFrom(phyloseq,"sample_data<-")
@@ -115,6 +116,7 @@ importFrom(phyloseq,phyloseq_to_deseq2)
 importFrom(phyloseq,sample_data)
 importFrom(phyloseq,tax_table)
 importFrom(phyloseq,taxa_are_rows)
+importFrom(pscl,zeroinfl)
 importFrom(reshape2,melt)
 importFrom(stats,cor)
 importFrom(stats,dnbinom)
