--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -30,7 +30,9 @@ Imports: phyloseq,
 Suggests: 
     knitr,
     rmarkdown,
-    testthat (>= 3.0.0)
+    BiocStyle,
+    testthat (>= 3.0.0), 
+    tidyverse
 Config/testthat/edition: 3
 Collate: 
     'data.R'
@@ -43,5 +45,5 @@ Collate:
 Depends: R (>= 2.10), 
           methods
 LazyData: true
-VignetteBuilder: rmarkdown
+VignetteBuilder: knitr
 biocViews: 
