examples, vignette and BiocCheck

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -5,6 +5,11 @@ S3method(heatmap,Zi)
 S3method(mean,Zi)
 S3method(median,Zi)
 S3method(quantile,Zi)
+export("deinflatedcounts<-")
+export("inputcounts<-")
+export("inputdata<-")
+export("model<-")
+export("weights<-")
 export(MissingValueHeatmap)
 export(deinflatedcounts)
 export(heatmap)
@@ -26,6 +31,11 @@ exportMethods("*")
 exportMethods("+")
 exportMethods("-")
 exportMethods("/")
+exportMethods("deinflatedcounts<-")
+exportMethods("inputcounts<-")
+exportMethods("inputdata<-")
+exportMethods("model<-")
+exportMethods("weights<-")
 exportMethods(assays)
 exportMethods(colData)
 exportMethods(colMeans2)
