--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -53,4 +53,4 @@ Depends: R (>= 4.3.0),
           methods
 VignetteBuilder: knitr
 biocViews: Software, StatisticalMethod
-LazyData: true
+BugReports: https://github.com/kreutz-lab/zitools/issues
