Adress Bioconductor changes

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,7 +11,9 @@ Description:
   functions (such as mean, median, standard deviation), plotting functions 
   (such as boxplots or heatmap) or differential abundance tests, it allows a 
   wide range of downstream analyses for zero-inflated data in a less biased 
-  manner.
+  manner. This becomes applicable in the context of microbiome analyses, where 
+  the data is often overdispersed and zero-inflated, therefore making data 
+  analysis extremly challenging. 
 License: BSD_3_clause + file LICENSE
 Encoding: UTF-8
 Roxygen: list(markdown = TRUE)
@@ -52,5 +54,6 @@ Collate:
 Depends: R (>= 4.3.0), 
           methods
 VignetteBuilder: knitr
-biocViews: Software, StatisticalMethod
+biocViews: Software, StatisticalMethod, Microbiome
+URL: https://github.com/kreutz-lab/zitools
 BugReports: https://github.com/kreutz-lab/zitools/issues
